--- a/lambda/package.json
+++ b/lambda/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "moment": "^2.27.0",
     "mysql": "^2.18.1",
     "serverless-mysql": "^1.5.4"
