--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,12 @@ node_js:
   - 12
 
 install:
-  - npm install aws-xray-sdk
+  - npm install aws-sdk
   - aws configure set aws_access_key_id $AWS_ACCESS_ID
   - aws configure set aws_access_key_id $AWS_SECRET_ID
   - aws configure set default.region us-east-1
 
-deploy:
+script:
   - cd lambda
   - zip -r function.zip .
   - aws lambda update-function-code --function-name=SNStoDatabase --zip-file=fileb://function.zip --region=us-east-1
