--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ install:
   - pip install awscli
   - npm install aws-sdk
   - aws configure set aws_access_key_id $AWS_ACCESS_ID
-  - aws configure set aws_access_key_id $AWS_SECRET_ID
+  - aws configure set aws_secret_access_key $AWS_SECRET_ID
   - aws configure set default.region us-east-1
 
 script:
